fix: fixed z-index hero and header

--- a/src/scss/templates/_header.scss
+++ b/src/scss/templates/_header.scss
@@ -5,5 +5,4 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 3;
 }
