--- a/src/scss/templates/_hero.scss
+++ b/src/scss/templates/_hero.scss
@@ -10,13 +10,11 @@
         height: 100%;
         background-color: rgba($dark, 70%);
         position: absolute;
-        z-index: 1;
         left: 0;
         top: 0;
     }
     &__content {
         max-width: 500px;
-        z-index: 2;
         position: relative;
     }
     &__title {
@@ -36,13 +34,11 @@
     }
     &__instagram {
         position: absolute;
-        z-index: 2;
         top: 0;
         left: 0;
     }
     &__scroll-down {
         position: absolute;
-        z-index: 2;
         left: 0;
         bottom: 0;
         transform: translateY(50%);
@@ -52,24 +48,25 @@
     max-width: 80px;
     height: 100%;
     background-color: $dark;
-    height: 100%;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    &:after{
-        content: "";
-        width: 1px;
-        height: 51px;
-        background-color: $primary;
-    }
     &__link {
+        display: flex;
+        align-items: center;
+        line-height: 0.8;
         font-size: 14px;
         font-family: "FuturaDemi";
         text-decoration: none;
         color: $primary;
         transform: rotate(90deg);
-        margin-bottom: 42px;
+        &::after{
+            content: "";
+            width: 50px;
+            height: 1px;
+            background-color: $primary;
+            margin-left: 8px;
+        }
     }
 }
 .title {
